--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,9 +29,7 @@ jobs:
         arguments: build
 
     - name: Build and Push Docker Image
-      uses: MaximilianoBz/dockerhub-buildpush@v1.0
+      uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
       with:
-        registry_url: 'docker.io'
-        repository_name: 'kobusbooyens94/local-dev:testing'
-        user_name: ${{ secrets.DOCKER_USERNAME }}
+        username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
