--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,9 @@ jobs:
         arguments: build
 
     - name: Build and Push Docker Image
-      uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+      uses: mr-smithers-excellent/docker-build-push@v4
       with:
+        image: kobusbooyens94/local-dev
+        registry: docker.io
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
